k8s/deployments/apply/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: k8s-example  
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: feirenliu/nginx
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
          ports:
          - containerPort: 80
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
