k8s/deployments/apply/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: k8s-example  
spec:
  # tls:
  #   - hosts:
  #       - example.com
  #     secretName: secret-cert
  defaultBackend:
    service:
      name: nginx-service
      port:
        number: 80
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
